--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <br>Aufgrund dessen, dass die Trainings- und Testdaten zufällig zugewiesen und generiert werden, kann es bei den Modellen (vor allem beim Overfitting) zu extremen Ergebnissen kommt, wenn zum Beispiel ein großer Teil der Start- oder Enddaten den Testdaten zugewiesen wird, da dadurch Teile der Kurve für das Training des Modells fehlen können. Hier ist daher ein Beispiel des Modells mit einer Darstellung des Overfittings bei dem sowohl das Ende als auch der Anfang der Kurve  durch die Trainingsdaten nicht erkannt wurde:
         </p>
         <div style="text-align:center; margin:2rem 0;">
-          <img src="r4.png" alt="Beispiel Overfitting" style="max-width:90%; height:auto; border-radius:12px; box-shadow:0 2px 12px rgba(0,0,0,0.08);">
+          <img src="R4.png" alt="Beispiel Overfitting" style="max-width:90%; height:auto; border-radius:12px; box-shadow:0 2px 12px rgba(0,0,0,0.08);">
           <div style="font-size:1rem; color:#555; margin-top:0.5rem;">Beispiel Overfitting des Modells</div>
         </div>
       </div>
